--- a/src/app/city/edit-city/edit-city.component.html
+++ b/src/app/city/edit-city/edit-city.component.html
@@ -11,22 +11,23 @@
         <small style="color: red;" *ngIf="editFormCity['controls']['nameCity'].errors['pattern']">The name of the city/province must be imported correctly and not allowed to enter the number</small>
       </div>
     </div>
-    <label class="control-label col-sm-3" >Title City: {{titleCity}}</label>
-    <div class="col-sm-10" style="margin-top: 10px; width: 300px;">          
-      <input type="text" class="form-control" formControlName="titleCity" placeholder="Example: Thành Phố / Tỉnh" name="titleCity">
-      <div *ngIf="editFormCity['controls']['titleCity'].dirty && editFormCity['controls']['titleCity'].errors">
-        <small style="color: red;" *ngIf="editFormCity['controls']['titleCity'].errors['required']">The title of the city/province must not leave empty </small>
-        <small style="color: red;" *ngIf="editFormCity['controls']['titleCity'].errors['pattern']">The title of the city/province must be imported correctly and not allowed to enter the number</small>
+    <label class="control-label col-sm-3" >Title City:</label>
+    <div class="col-sm-10" style="margin-top: 10px; width: 300px;">  
+      <div class="custom-select">
+        <select class="form-control" formControlName="titleCity" >
+          <option  value="" disabled selected> Choose the city title</option>
+          <option *ngFor="let titleCity of titleCitys">{{ titleCity }}</option>
+        </select>
       </div>
     </div>
-    <label class="control-label col-sm-3" >ID Nation: {{idNation}}</label>
-    <div class="col-sm-10" style="margin-top: 10px; width: 300px;">          
-      <input type="text" class="form-control" formControlName="idNation" placeholder="Example: 1 / 2 ..." name="idNation">
-      <div *ngIf="editFormCity['controls']['idNation'].dirty && editFormCity['controls']['idNation'].errors">
-        <small style="color: red;" *ngIf="editFormCity['controls']['idNation'].errors['required']">The country code is not allowed to disable and only allow numbers</small>
-        <small style="color: red;" *ngIf="editFormCity['controls']['idNation'].errors['pattern']">The nation code does not enter the correct format (EX : 1)</small>
-        <small style="color: red;" *ngIf="editFormCity['controls']['idNation'].errors['maxlength']">The country code does not exist</small>
-      </div>
+    <label class="control-label col-sm-3" >Nation:</label>
+    <div class="col-sm-10" style="margin-top: 10px; width: 300px;">  
+      <div class="custom-select">
+        <select class="form-control" formControlName="idNation" >
+          <option  value="" disabled selected> Choose the nation</option>
+          <option  *ngFor=" let nation of nations" [value]="nation.idNation">{{ nation.nameNation }}</option>
+        </select> 
+      </div>        
     </div>
   </div>
   <div class="form-group" style="margin-top: 20px;">        
