--- a/src/app/city/list-city/list-city.component.html
+++ b/src/app/city/list-city/list-city.component.html
@@ -16,7 +16,7 @@
     <tr>
         <th scope="col">ID</th>
         <th scope="col">City 
-            <button style="font-size: 15px;" (click)="handleClickCity()">^</button>
+            <button style="font-size: 15px; color: white; background-color: #0d6efd; border-radius: 5px;" (click)="handleClickCity()">^</button>
         </th>
         <th scope="col">title</th>
         <th scope="col">Nation</th>
