--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,6 +9,7 @@
     </div>
 </nav>
 <div class="div-body">
-    <img style="width: 100%;height: 660px;" src="https://www.w3schools.com/w3images/workbench.jpg" alt="" >
+    <img style="width: 100%;height: 670px;" src="https://mega.com.vn/media/news/2306_hinh-nen-dep-cho-may-tinh9.jpg" alt="" >
     <div class="overlay-text">Welcome to the fun site </div>  
 </div>
+
