--- a/src/app/nation/create-nation/create-nation.component.css
+++ b/src/app/nation/create-nation/create-nation.component.css
@@ -11,3 +11,25 @@
 margin-top: 50px;
 margin-left: 200px;
 }
+
+/* Định dạng cơ bản của select */
+.custom-select {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .custom-select select {
+    background: #fff;
+    border-radius: 4px;
+    width: 300px;
+  }
+  .custom-select::after {
+    content: '\25BC'; /* Mã Unicode cho mũi tên đi xuống */
+    position: absolute;
+    top: 50%;
+    right: 15px;
+    transform: translateY(-50%);
+    pointer-events: none; /* Để mũi tên không cản trở việc chọn */
+    font-size: 12px;
+    color: black;
+  }
