--- a/src/app/student/list-student/list-student.component.html
+++ b/src/app/student/list-student/list-student.component.html
@@ -16,12 +16,12 @@
     <tr>
         <th scope="col">ID</th>
         <th scope="col">Student 
-            <button style="font-size: 15px;" (click)="handleClickStudentName()">^</button>
+            <button style="font-size: 15px; color: white; background-color: #0d6efd; border-radius: 5px;" (click)="handleClickStudentName()">^</button>
         </th>
         <th scope="col">Phone</th>
         <th scope="col">Email</th>
         <th scope="col">BirthDay 
-            <button style="font-size: 15px;" (click)="handleClickStudentBirth()">^</button>
+            <button style="font-size: 15px;color: white; background-color: #0d6efd; border-radius: 5px;" (click)="handleClickStudentBirth()">^</button>
         </th>
         <th scope="col">Nation</th>
         <th scope="col">City</th>
