--- a/src/app/district/list-district/list-district.component.html
+++ b/src/app/district/list-district/list-district.component.html
@@ -16,7 +16,7 @@
     <tr>
         <th scope="col">ID</th>
         <th scope="col">District 
-            <button style="font-size: 15px;" (click)="handleClickDistrict()">^</button>
+            <button style="font-size: 15px; color: white; background-color: #0d6efd; border-radius: 5px;" (click)="handleClickDistrict()">^</button>
         </th>
         <th scope="col">Title</th>
         <th scope="col">City</th>
