--- a/src/app/nation/create-nation/create-nation.component.html
+++ b/src/app/nation/create-nation/create-nation.component.html
@@ -12,11 +12,12 @@
       </div>
     </div>
     <label class="control-label col-sm-3" >Title Nation:</label>
-    <div class="col-sm-10" style="margin-top: 10px; width: 300px;">          
-      <input type="text" class="form-control" formControlName="titleNation" placeholder="Example: Châu Á" name="titleNation">
-      <div *ngIf="createFormNation['controls']['titleNation'].dirty && createFormNation['controls']['titleNation'].errors">
-        <small style="color: red;" *ngIf="createFormNation['controls']['titleNation'].errors['required']">The title of the country is not empty </small>
-        <small style="color: red;" *ngIf="createFormNation['controls']['titleNation'].errors['pattern']">The nation's title must be exactly imported and not allowed to enter the number</small>
+    <div class="col-sm-10" style="margin-top: 10px; width: 300px;">  
+      <div class="custom-select">
+        <select class="form-control" formControlName="titleNation" >
+          <option  value="" disabled selected>Select national title</option>
+          <option *ngFor="let title of titles">{{ title }}</option>
+        </select>
       </div>
     </div>
   </div>
