--- a/src/app/nation/list-nation/list-nation.component.html
+++ b/src/app/nation/list-nation/list-nation.component.html
@@ -4,6 +4,7 @@
         <a style="margin-left: 850px;" routerLink=""  class="btn btn-sm btn-primary" >Sign out</a>
     </div>
 </nav>
+
 <h1 style="text-align: center;">List Nations</h1>
 <div class="div-searchNation">
 <a id="btn-add" routerLink="create-nation"  class="btn btn-sm btn-primary" >Add</a>
@@ -16,7 +17,7 @@
     <tr>
         <th scope="col">ID</th>
         <th scope="col">Name
-            <button style="font-size: 15px;" (click)="handleClickNation()">^</button>
+            <button style="font-size: 15px; color: white; background-color: #0d6efd; border-radius: 5px;" (click)="handleClickNation()">^</button>
         </th>
         <th scope="col">Title</th>
         <th scope="col">Option</th>
@@ -41,3 +42,5 @@
     <span style="margin: 10px; margin-right: 10px; font-weight: bolder;"> {{ currentPageNation }} </span>
     <button (click)="goToPageNation(currentPageNation + 1)" [disabled]="currentPageNation === totalPagesNation">Next</button>
 </div>
+
+
