--- a/src/app/student/create-student/create-student.component.css
+++ b/src/app/student/create-student/create-student.component.css
@@ -7,4 +7,25 @@
     height: 670px;
     background-color: lightblue; /* Đặt màu nền cho dễ nhìn */
 }
+/* Định dạng cơ bản của select */
+.custom-select {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .custom-select select {
+    background: #fff;
+    border-radius: 4px;
+    width: 300px;
+  }
+  .custom-select::after {
+    content: '\25BC'; /* Mã Unicode cho mũi tên đi xuống */
+    position: absolute;
+    top: 50%;
+    right: 15px;
+    transform: translateY(-50%);
+    pointer-events: none; /* Để mũi tên không cản trở việc chọn */
+    font-size: 12px;
+    color: black;
+  }
 
