--- a/src/app/student/create-student/create-student.component.html
+++ b/src/app/student/create-student/create-student.component.html
@@ -29,50 +29,49 @@
         </div>
         <label class="control-label col-sm-3" >BirthDay:</label>
         <div class="col-sm-10" style="margin-top: 10px; width: 300px;">          
-          <input type="text" class="form-control" formControlName="birthDayStudent" placeholder="Example: 2024-01-01" name="birthDayStudent">
+          <input type="date" class="form-control" formControlName="birthDayStudent" placeholder="Example: 2024-01-01" name="birthDayStudent">
           <div *ngIf="addFormStudent['controls']['birthDayStudent'].dirty && addFormStudent['controls']['birthDayStudent'].errors">
             <small style="color: red;" *ngIf="addFormStudent['controls']['birthDayStudent'].errors['required']">Date of birth must not leave empty</small>
-            <small style="color: red;" *ngIf="addFormStudent['controls']['birthDayStudent'].errors['pattern']">Date of birth does not enter the correct format (2024-01-01)</small>
           </div>
         </div>
     </div>
     <div style="margin-top: 30px; margin-left: 30px;" class="col-md-5">
-        <label class="control-label col-sm-3" >ID Nation:</label>
-        <div class="col-sm-10" style="margin-top: 10px; width: 300px;">          
-          <input type="text" class="form-control" formControlName="idNation" placeholder="Example: 1 / 2 ..." name="idNation">
-          <div *ngIf="addFormStudent['controls']['idNation'].dirty && addFormStudent['controls']['idNation'].errors">
-            <small style="color: red;" *ngIf="addFormStudent['controls']['idNation'].errors['required']">The country code is not allowed to disable and only allow numbers</small>
-            <small style="color: red;" *ngIf="addFormStudent['controls']['idNation'].errors['pattern']">The nation code does not enter the correct format (EX : 1)</small>
-            <small style="color: red;" *ngIf="addFormStudent['controls']['idNation'].errors['maxlength']">The country code does not exist</small>
-          </div>
-        </div>
-        <label class="control-label col-sm-3" >ID City:</label>
-        <div class="col-sm-10" style="margin-top: 10px; width: 300px;">          
-          <input type="text" class="form-control" formControlName="idCity" placeholder="Example: 1 / 2 ..." name="idCity">
-          <div *ngIf="addFormStudent['controls']['idCity'].dirty && addFormStudent['controls']['idCity'].errors">
-            <small style="color: red;" *ngIf="addFormStudent['controls']['idCity'].errors['required']">The city codes are not allowed to leave and only allow numbers</small>
-            <small style="color: red;" *ngIf="addFormStudent['controls']['idCity'].errors['pattern']">The city code does not enter the correct format (EX : 1)</small>
-            <small style="color: red;" *ngIf="addFormStudent['controls']['idCity'].errors['maxlength']">The City code does not exist</small>
-          </div>
-        </div>
-        <label class="control-label col-sm-3" >ID District:</label>
-        <div class="col-sm-10" style="margin-top: 10px; width: 300px;">          
-          <input type="text" class="form-control" formControlName="idDistrict" placeholder="Example: 1 / 2 ..." name="idDistrict">
-          <div *ngIf="addFormStudent['controls']['idDistrict'].dirty && addFormStudent['controls']['idDistrict'].errors">
-            <small style="color: red;" *ngIf="addFormStudent['controls']['idDistrict'].errors['required']">The District codes are not allowed to leave and only allow numbers</small>
-            <small style="color: red;" *ngIf="addFormStudent['controls']['idDistrict'].errors['pattern']">The District code does not enter the correct format (EX : 1)</small>
-            <small style="color: red;" *ngIf="addFormStudent['controls']['idDistrict'].errors['maxlength']">The District code does not exist</small>
-          </div>
-        </div>
-        <label class="control-label col-sm-3" >ID Ward:</label>
-        <div class="col-sm-10" style="margin-top: 10px; width: 300px;">          
-          <input type="text" class="form-control" formControlName="idWard" placeholder="Example: 1 / 2 ..." name="idWard">
-          <div *ngIf="addFormStudent['controls']['idWard'].dirty && addFormStudent['controls']['idWard'].errors">
-            <small style="color: red;" *ngIf="addFormStudent['controls']['idWard'].errors['required']">The Ward codes are not allowed to leave and only allow numbers</small>
-            <small style="color: red;" *ngIf="addFormStudent['controls']['idWard'].errors['pattern']">The Ward code does not enter the correct format (EX : 1)</small>
-            <small style="color: red;" *ngIf="addFormStudent['controls']['idWard'].errors['maxlength']">The Ward code does not exist</small>
-          </div>
-        </div>
+      <label class="control-label col-sm-3" >Nation:</label>
+      <div class="col-sm-10" style="margin-top: 10px; width: 300px;">  
+        <div class="custom-select">
+          <select class="form-control" formControlName="idNation" >
+            <option  value="" disabled selected> Choose the nation</option>
+            <option  *ngFor=" let nation of nations" [value]="nation.idNation">{{ nation.nameNation }}</option>
+          </select> 
+        </div>        
+      </div>
+      <label class="control-label col-sm-3" >City:</label>
+      <div class="col-sm-10" style="margin-top: 10px; width: 300px;">  
+        <div class="custom-select">
+          <select class="form-control" formControlName="idCity" (change)="onChangeCity($event)">
+            <option  value="" disabled selected> Choose the City</option>
+            <option  *ngFor=" let city of citys" [value]="city.idCity">{{ city.nameCity }}</option>
+          </select> 
+        </div>        
+      </div>
+      <label class="control-label col-sm-3" >District:</label>
+      <div class="col-sm-10" style="margin-top: 10px; width: 300px;">  
+        <div class="custom-select">
+          <select class="form-control" formControlName="idDistrict" >
+            <option  value="" disabled selected> Choose the District</option>
+            <option  *ngFor=" let district of districts" [value]="district.idDistrict">{{ district.nameDistrict }}</option>
+          </select> 
+        </div>        
+      </div>
+      <label class="control-label col-sm-3" >Ward:</label>
+      <div class="col-sm-10" style="margin-top: 10px; width: 300px;">  
+        <div class="custom-select">
+          <select class="form-control" formControlName="idWard" >
+            <option  value="" disabled selected> Choose the Ward</option>
+            <option  *ngFor=" let ward of wards" [value]="ward.idWard">{{ ward.nameWard }}</option>
+          </select> 
+        </div>        
+      </div>   
     </div>
 </div>
 
