--- a/src/app/ward/edit-ward/edit-ward.component.html
+++ b/src/app/ward/edit-ward/edit-ward.component.html
@@ -11,22 +11,23 @@
         <small style="color: red;" *ngIf="wardFormEdit['controls']['nameWard'].errors['pattern']">The name of the Ward must be imported correctly and not allowed to enter the number</small>
       </div>
     </div>
-    <label class="control-label col-sm-3" >Title Ward: {{titleWard}}</label>
-    <div class="col-sm-10" style="margin-top: 10px; width: 300px;">          
-      <input type="text" class="form-control" formControlName="titleWard" placeholder="Example: Phường / Xã / Thị Trấn" name="titleWard">
-      <div *ngIf="wardFormEdit['controls']['titleWard'].dirty && wardFormEdit['controls']['titleWard'].errors">
-        <small style="color: red;" *ngIf="wardFormEdit['controls']['titleWard'].errors['required']">The Ward's title is not allowed to leave empty </small>
-        <small style="color: red;" *ngIf="wardFormEdit['controls']['titleWard'].errors['pattern']">The Ward's title must be entered correctly and is not allowed to enter the number - Special characters</small>
+    <label class="control-label col-sm-3" >Title Ward:</label>
+    <div class="col-sm-10" style="margin-top: 10px; width: 300px;">  
+      <div class="custom-select">
+        <select class="form-control" formControlName="titleWard" >
+          <option  value="" disabled selected> Choose the Wards title</option>
+          <option *ngFor="let titleWard of titleWards">{{ titleWard }}</option>
+        </select>
       </div>
     </div>
-    <label class="control-label col-sm-3" >ID District: {{idDistrict}}</label>
-    <div class="col-sm-10" style="margin-top: 10px; width: 300px;">          
-      <input type="text" class="form-control" formControlName="idDistrict" placeholder="Example: 1 / 2 ..." name="idDistrict">
-      <div *ngIf="wardFormEdit['controls']['idDistrict'].dirty && wardFormEdit['controls']['idDistrict'].errors">
-        <small style="color: red;" *ngIf="wardFormEdit['controls']['idDistrict'].errors['required']">The District codes are not allowed to leave and only allow numbers</small>
-        <small style="color: red;" *ngIf="wardFormEdit['controls']['idDistrict'].errors['pattern']">The District code does not enter the correct format (EX : 1)</small>
-        <small style="color: red;" *ngIf="wardFormEdit['controls']['idDistrict'].errors['maxlength']">The District code does not exist</small>
-      </div>
+    <label class="control-label col-sm-3" >District:</label>
+    <div class="col-sm-10" style="margin-top: 10px; width: 300px;">  
+      <div class="custom-select">
+        <select class="form-control" formControlName="idDistrict" >
+          <option  value="" disabled selected> Choose the District</option>
+          <option  *ngFor=" let district of districts" [value]="district.idDistrict">{{ district.nameDistrict }}</option>
+        </select> 
+      </div>        
     </div>
   </div>
   <div class="form-group" style="margin-top: 20px;">        
