--- a/src/app/ward/list-ward/list-ward.component.html
+++ b/src/app/ward/list-ward/list-ward.component.html
@@ -16,7 +16,7 @@
     <tr>
         <th scope="col">ID</th>
         <th scope="col">Ward 
-            <button style="font-size: 15px;" (click)="handleClickWard()">^</button>
+            <button style="font-size: 15px; color: white; background-color: #0d6efd; border-radius: 5px;" (click)="handleClickWard()">^</button>
         </th>
         <th scope="col">Title</th>
         <th scope="col">District</th>
